# longinus

./: .gitignore  Cargo.toml  FEEDBACK.md  GAME_DESIGN_SCRATCH.md  MASTER_PLAN.md  README.md  SPRINT.md  STORY.md  game  package.sh
.VSCodeCounter/2025-11-10_01-17-18/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: rust.yml
assets/: project.tiled-session  save_initial.json
assets/maps/: CL.world  CL3-1.json  CL3-1.json~  CL4-1.json  CL4-2.json  CL4-3.json  CL5-1.json  CL5-2.json  CL5-3.json  MP1.json  MP2.json  MP3.json  MP4.json  MP5.json  MP6.json  MP7.json  MP8.json  MP9.json  entryway.json  map1.json  map2.json  map3.json  map4.json  test.json  world.world  world_master.json
assets/maps/new_test/: MP1.json
assets/maps/old/: CL.world  CL4-2.json  CL5-2.json  entryway.json  map1.json  map2.json  map3.json  map4.json  testmap.json
assets/maps/templates/: EnemySpawn.tx  Health Tank.tx  MapTransition.tx  Terminal.tx
assets/maps/templates/enemies/: Defender.tx  Goblin.tx
assets/maps/tilesets/: colliders.tsx
src/: #ecs.rs#  ability.rs  camera.rs  combat.rs  controls.rs  ecs.rs  enemy.rs  entity.rs  f.rs  game.rs  graphics.rs  graphics_utils.rs  load_map.rs  main.rs  menu.rs  physics.rs  save.rs  system.rs  units.rs
src/assets/: lib.rs  map-internal.tsx  map1.rs
src/assets/maps/: map1.json  map2.json
src/assets/maps/tilesets/: colliders.tsx
storage/: save_2025-11-17T00:16:24.066853578+00:00  save_2025-11-19T05:07:53.997601854+00:00  save_2025-11-19T08:44:05.036226469+00:00
