[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
archery = "1.2.2"
chrono = "0.4.42"
derive_more = { version = "2.0.1", features = ["add", "mul"	] }
device_query = "4.0.1"
gilrs = "0.11.0"
itertools = "0.14.0"
macroquad = "0.4.14"
rapier2d = "0.31.0"
rpds = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
debug = true
